force-app/main/default/objects/AccountValueStream__c/AccountValueStream__c.object-meta.xml
<CustomObject>
    <label>Account Value Stream</label>
    <nameField>
        <label>Account Value Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Value Streams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>