force-app/main/default/objects/AccountValueStream__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account associated with the Value Stream. Lookup relationship</description>
    <inlineHelpText>The Account associated with the Value Stream. Lookup relationship</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Value Streams</relationshipLabel>
    <relationshipName>Account_Value_Streams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>