force-app/main/default/objects/AccountValueStream__c/fields/Atlan_Takeaways__c.field-meta.xml
<CustomField>
    <fullName>Atlan_Takeaways__c</fullName>
    <description>Key takeaways and learnings from this Account&apos;s implementation of the Value Stream</description>
    <inlineHelpText>Key takeaways and learnings from this Account&apos;s implementation of the Value Stream</inlineHelpText>
    <label>Atlan Takeaways</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>