force-app/main/default/objects/AccountValueStream__c/fields/Context_Actions__c.field-meta.xml
<CustomField>
    <fullName>Context_Actions__c</fullName>
    <description>The Context and Actions required to enable the Value Stream. This will create records in the Account Context &amp; Action object</description>
    <inlineHelpText>The Context and Actions required to enable the Value Stream. This will create records in the Account Context &amp; Action object</inlineHelpText>
    <label>Context &amp; Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Periodically review data to be deleted</fullName>
            </value>
            <value>
                <fullName>Create JIRA ticket</fullName>
            </value>
            <value>
                <fullName>Download list of tables</fullName>
            </value>
            <value>
                <fullName>Request access to data</fullName>
            </value>
            <value>
                <fullName>Create pivot tables</fullName>
            </value>
            <value>
                <fullName>Create access policy</fullName>
            </value>
            <value>
                <fullName>Document data science models</fullName>
            </value>
            <value>
                <fullName>Write SQL to explore the data</fullName>
            </value>
            <value>
                <fullName>Notifying different teams</fullName>
            </value>
            <value>
                <fullName>Update deprecation status of table</fullName>
            </value>
            <value>
                <fullName>Share data</fullName>
            </value>
            <value>
                <fullName>Document version history</fullName>
            </value>
            <value>
                <fullName>Write production SQL code</fullName>
            </value>
            <value>
                <fullName>Modify production pipeline scripts</fullName>
            </value>
            <value>
                <fullName>Updating BI model</fullName>
            </value>
            <value>
                <fullName>Create python models</fullName>
            </value>
            <value>
                <fullName>Popular tables</fullName>
            </value>
            <value>
                <fullName>Downstream dashboards for tables</fullName>
            </value>
            <value>
                <fullName>Downstream tables</fullName>
            </value>
            <value>
                <fullName>Dependent tables for dashboards</fullName>
            </value>
            <value>
                <fullName>How are columns and metrics calculated</fullName>
            </value>
            <value>
                <fullName>Upstream tables</fullName>
            </value>
            <value>
                <fullName>What dashboards &amp; reports exists</fullName>
            </value>
            <value>
                <fullName>What tables exists</fullName>
            </value>
            <value>
                <fullName>Logic on how tables are created</fullName>
            </value>
            <value>
                <fullName>Contractual data</fullName>
            </value>
            <value>
                <fullName>Size of the table</fullName>
            </value>
            <value>
                <fullName>KPI definition</fullName>
            </value>
            <value>
                <fullName>Meaning of different queries</fullName>
            </value>
            <value>
                <fullName>Sensitive data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>