force-app/main/default/objects/AccountValueStream__c/fields/Customer_Interaction_Links__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interaction_Links__c</fullName>
    <description>Links to emails, call snippets, Slack messages, etc. that relate to this Value Stream</description>
    <inlineHelpText>Links to emails, call snippets, Slack messages, etc. that relate to this Value Stream</inlineHelpText>
    <label>Customer Interaction Links</label>
    <type>TextArea</type>
</CustomField>