force-app/main/default/objects/AccountValueStream__c/fields/Implementation_Details__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Details__c</fullName>
    <description>Details about how the Value Stream is/will be implemented at the Account</description>
    <inlineHelpText>Details about how the Value Stream is/will be implemented at the Account</inlineHelpText>
    <label>Implementation Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>