force-app/main/default/objects/AccountValueStream__c/fields/Implemented_Date__c.field-meta.xml
<CustomField>
    <fullName>Implemented_Date__c</fullName>
    <description>The date the Value Stream status was fully implemented (status switched to &quot;Implemented&quot;)</description>
    <inlineHelpText>The date the Value Stream status was fully implemented (status switched to &quot;Implemented&quot;)</inlineHelpText>
    <label>Implemented Date</label>
    <type>Date</type>
</CustomField>