force-app/main/default/objects/AccountValueStream__c/fields/In_Progress_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Date__c</fullName>
    <description>The date the Value Stream status was switched to &quot;In Progress&quot;</description>
    <inlineHelpText>The date the Value Stream status was switched to &quot;In Progress&quot;</inlineHelpText>
    <label>In Progress Date</label>
    <type>Date</type>
</CustomField>