force-app/main/default/objects/AccountValueStream__c/fields/Problem_Statement_Details__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement_Details__c</fullName>
    <description>Details about how the Problem Statements the Account is trying to solve with this Value Stream</description>
    <inlineHelpText>Details about how the Problem Statements the Account is trying to solve with this Value Stream</inlineHelpText>
    <label>Problem Statement Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>