force-app/main/default/objects/AccountValueStream__c/fields/Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Value_Stream__c</fullName>
    <label>Value Stream</label>
    <referenceTo>ValueStream__c</referenceTo>
    <relationshipLabel>Account Value Streams</relationshipLabel>
    <relationshipName>Account_Value_Streams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>